2001-04-20 18:05 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  + include/hb_io.h
  * source/common/hbtrace.c
  * source/rtl/console.c
  * source/rtl/dir.c
  * source/rtl/disksphb.c
  * source/rtl/filesys.c
  * source/rtl/gtapi.c
    + Instead of using #include <io.h> and/or messy #ifdef blocks to
      include <unistd.h> and/or <io.h>, just use #include "hb_io.h"
      (based on an idea from Dave Pearson).

2001-04-20 19:00 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * contrib/libmisc/dbftools.c
     * fieldtype() fixed accordingly to RDD changes
   * contrib/mysql/mysql.c
     * sqlConnect() fixed for version older than 3.22.34
     + added support for mysql_affected_rows() and mysql_field_count()
   * tests/db_brows.ch
   * tests/db_brows.prg
     * some improvements


2001-04-20 16:30 CET Martin Vogel <vogel@inttec.de>

  + contrib/libct/charop.c
    + charadd(), charand(), charor(), charxor(), charnot() and 
      (NEW!) charsub(), charshl(), charshr(), charrll() and charrlr() functions

  * contrib/libct/Makefile
    + added contrib/libct/charop.c

  * contrib/libct/makefile.bc
    + added contrib/libct/charop.c

  * contrib/libct/makefile.vc
    + added contrib/libct/charop.c
 
  * contrib/libct/ctflist.txt
    * changed status of functions mentioned above

  * contrib/libct/readme.txt
    + added comments for new functions

  + contrib/libct/tests/charadd.prg
  + contrib/libct/tests/charand.prg
  + contrib/libct/tests/charor.prg
  + contrib/libct/tests/charnot.prg
  + contrib/libct/tests/charxor.prg
  + contrib/libct/tests/charsub.prg
  + contrib/libct/tests/charshl.prg
  + contrib/libct/tests/charshr.prg
  + contrib/libct/tests/charrll.prg
  + contrib/libct/tests/charrlr.prg
    ! small test programs for new functions 

  * contrib/libct/tests/Makefile
    + added contrib/libct/tests/charadd.prg
    + added contrib/libct/tests/charand.prg
    + added contrib/libct/tests/charor.prg
    + added contrib/libct/tests/charnot.prg