@@ -1,3 +1,8 @@
+2001-04-20 18:15 UTC-0400 David G. Holm <dholm@jsd-llc.com>
+
+  * source/rtl/disksphb.c
+    % Fixed errors in EG_OPEN error generation.
+
 2001-04-20 18:05 UTC-0400 David G. Holm <dholm@jsd-llc.com>
 
   + include/hb_io.h
